Add paint example to reality tabs links list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -27,6 +27,10 @@ const links = [
     url: 'planes_ml.html',
   },
   {
+    name: 'Paint',
+    url: 'paint_ml.html',
+  },
+  {
     name: 'Hands',
     url: 'hands_ml.html',
   },
