Add graffiti example to reality tabs links list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -31,6 +31,10 @@ const links = [
     url: 'paint_ml.html',
   },
   {
+    name: 'Graffiti',
+    url: 'graffiti_ml.html',
+  },
+  {
     name: 'Hands',
     url: 'hands_ml.html',
   },
