--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1407,7 +1407,7 @@ function animate(time, frame) {
 
       localVector
         .add(
-          localVector2.set(0, 0, -1.5 - scrollAxis)
+          localVector2.set(0, 0, -1.5 - Math.max(scrollAxis,-1.5))
             .applyQuaternion(localQuaternion)
         );
       iframe.position = localVector.toArray();
