--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -15,6 +15,10 @@ const links = [
     url: 'hello_ml.html',
   },
   {
+    name: 'Tutorial',
+    url: 'tutorial.html',
+  },
+  {
     name: 'Exobot',
     url: 'exobot.html',
   },
@@ -2011,7 +2015,7 @@ const _bootFakeDisplay = async () => {
 
   display = fakeDisplay;
 
-  _openUrl('exobot.html');
+  _openUrl('tutorial.html');
   focusedTab = rig.menuMesh.urlMesh;
   rig.menuMesh.urlMesh.updateText();
   rig.menuMesh.listMesh.updateList();
@@ -2064,7 +2068,7 @@ if (navigator.xr && !query.fake) {
           renderer.autoClearDepth = false;
         }
 
-        _openUrl('exobot.html');
+        _openUrl('tutorial.html');
         _updateRigLists();
 
         console.log('loaded root in XR');
