Start tutorial exobot 1m  off the ground

--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -85,7 +85,7 @@
 
           o = o.scene;
 
-          // o.position.z = -1;
+          o.position.y = 1;
           o.rotation.order = 'YXZ';
           o.scale.set(0.2, 0.2, 0.2);
           /* o.traverse(e => {
