--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -423,8 +423,11 @@
             if (display.session && !animation.hitTesting) {
               const localAnimation = animation;
               display.session.requestHitTest(
-                rayMesh.position.toArray(localVectorFloat32Array),
-                rayMesh.quaternion.toArray(localVectorFloat32Array2)
+                rayMesh.position
+                  .toArray(localVectorFloat32Array),
+                localVector.set(0, 0, -1)
+                  .applyQuatenion(rayMesh.quaternion)
+                  .toArray(localVectorFloat32Array2)
               )
                 .then(results => {
                   if (animation === localAnimation) {
